--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                 </div>
             </section>
         </main>
+        <footer>
+            <p>&copy;Vinicius Lima - Desenvolvedor FrontEnd</p>
+        </footer>
     </div>
     <script src="script.js"></script>
 </body>
