acrescentei alguns tipos de moedas

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <select name="" id="select">
                 <option value="dolar" id="dolarSelect">US$ Dólar</option>
                 <option value="euro" id="euroSelect">€ Euro</option>
+                <option value="bitcoin" id="euroSelect">Bitcoins</option>
+                <option value="euro" id="euroSelect">€ Euro</option>
+                <option value="pip" id="euroSelect">PIP Forex</option>
             </select>
 
             <p>Valor:</p>
